00-k8s/frontend-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
  labels:
    app: frontend-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
        - name: frontend-ui
          image: quay.io/mukeshs1306/frontend-ui:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
