00-k8s/frontend-ui/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-ui
  labels:
    app: frontend-ui
spec:
  host: ui.skyfly.example
  to:
    kind: Service
    name: frontend-ui
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
